# DataFlow-Lite

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-TW.md  pyproject.toml
examples/: csv_pipeline.yaml  data.csv  dir_stats_pipeline.yaml
src/dataflow_lite/: __init__.py  cli.py  config.py  detector.py  engine.py  lineage.py  pipeline.py  sinks.py  sources.py  transforms.py
tests/: test_all.py
